--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -7766,7 +7766,120 @@ p, li { white-space: pre-wrap; }
            </attribute>
            <layout class="QGridLayout" name="gridLayout_BrCv_edit" columnstretch="1,3">
             <item row="0" column="0">
-             <layout class="QGridLayout" name="gridLayout_BrCv_6" rowstretch="0,0,0,0,0,0,0,0">
+             <layout class="QGridLayout" name="gridLayout_BrCv_6" rowstretch="0,0,0,0,0,0,0,0,0">
+              <item row="1" column="1" colspan="2">
+               <widget class="QGroupBox" name="breathhold_BrCv">
+                <property name="title">
+                 <string>Breath hold</string>
+                </property>
+                <layout class="QGridLayout" name="gridLayout_BrCv_8" columnstretch="2,1">
+                 <item row="2" column="0">
+                  <widget class="QLineEdit" name="lineEdit_BrCv_30">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="text">
+                    <string>Duration (s)</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="QSpinBox" name="breathholdStart">
+                   <property name="maximum">
+                    <number>999999</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="0">
+                  <widget class="QLineEdit" name="lineEdit_BrCv_29">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="text">
+                    <string>Start timestamp (s)</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="2" column="1">
+                  <widget class="QDoubleSpinBox" name="breathholdDuration"/>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QCheckBox" name="applyBreathhold">
+                   <property name="text">
+                    <string>Apply breath hold</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+              <item row="5" column="1" colspan="2">
+               <widget class="QGroupBox" name="export_BrCv">
+                <property name="title">
+                 <string>Export</string>
+                </property>
+                <layout class="QGridLayout" name="gridLayout_BrCv_9" columnstretch="1,1">
+                 <item row="2" column="0">
+                  <widget class="QPushButton" name="exportData_BrCv">
+                   <property name="text">
+                    <string>Export CSV</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="QLineEdit" name="editExportFile_BrCv"/>
+                 </item>
+                 <item row="2" column="1">
+                  <widget class="QPushButton" name="exportGCODE_BrCv">
+                   <property name="text">
+                    <string>Export GCODE</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="0">
+                  <widget class="QLineEdit" name="lineEdit_BrCv_28">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="text">
+                    <string>Filename</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLineEdit" name="lineEdit_BrCv_24">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="text">
+                    <string>Copy fragment</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1">
+                  <widget class="QSpinBox" name="copyCurve_BrCv">
+                   <property name="value">
+                    <number>1</number>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QPushButton" name="applyOper_BrCv">
+                <property name="text">
+                 <string>Apply operations</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="1" colspan="2">
+               <widget class="Line" name="line_BrCv">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+               </widget>
+              </item>
               <item row="2" column="2">
                <widget class="QPushButton" name="undoOperations_BrCv">
                 <property name="text">
@@ -7864,7 +7977,7 @@ p, li { white-space: pre-wrap; }
                 </layout>
                </widget>
               </item>
-              <item row="7" column="1" colspan="2">
+              <item row="8" column="1" colspan="2">
                <spacer name="verticalSpacer_BrCv_4">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
@@ -7877,117 +7990,86 @@ p, li { white-space: pre-wrap; }
                 </property>
                </spacer>
               </item>
-              <item row="2" column="1">
-               <widget class="QPushButton" name="applyOper_BrCv">
-                <property name="text">
-                 <string>Apply operations</string>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="1" colspan="2">
-               <widget class="QGroupBox" name="export_BrCv">
+              <item row="3" column="1" colspan="2">
+               <widget class="QGroupBox" name="smoothing_BrCv">
                 <property name="title">
-                 <string>Export</string>
+                 <string>Smoothing</string>
                 </property>
-                <layout class="QGridLayout" name="gridLayout_BrCv_9" columnstretch="1,1">
-                 <item row="2" column="0">
-                  <widget class="QPushButton" name="exportData_BrCv">
-                   <property name="text">
-                    <string>Export CSV</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="1">
-                  <widget class="QLineEdit" name="editExportFile_BrCv"/>
-                 </item>
-                 <item row="2" column="1">
-                  <widget class="QPushButton" name="exportGCODE_BrCv">
-                   <property name="text">
-                    <string>Export GCODE</string>
-                   </property>
-                  </widget>
-                 </item>
+                <layout class="QGridLayout" name="gridLayout_77" columnstretch="1,1,0">
                  <item row="1" column="0">
-                  <widget class="QLineEdit" name="lineEdit_BrCv_28">
-                   <property name="enabled">
-                    <bool>false</bool>
+                  <widget class="QCheckBox" name="smooth_BrCv">
+                   <property name="layoutDirection">
+                    <enum>Qt::RightToLeft</enum>
                    </property>
                    <property name="text">
-                    <string>Filename</string>
+                    <string>Smoothing</string>
+                   </property>
+                   <property name="checked">
+                    <bool>true</bool>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="0">
-                  <widget class="QLineEdit" name="lineEdit_BrCv_24">
-                   <property name="enabled">
-                    <bool>false</bool>
+                  <widget class="QCheckBox" name="interp_BrCv">
+                   <property name="layoutDirection">
+                    <enum>Qt::RightToLeft</enum>
                    </property>
                    <property name="text">
-                    <string>Copy fragment</string>
+                    <string>Interpolate</string>
+                   </property>
+                   <property name="checked">
+                    <bool>true</bool>
                    </property>
                   </widget>
+                 </item>
+                 <item row="1" column="1">
+                  <widget class="QComboBox" name="smooth_method_BrCv"/>
                  </item>
                  <item row="0" column="1">
-                  <widget class="QSpinBox" name="copyCurve_BrCv">
+                  <widget class="QDoubleSpinBox" name="interp_value_BrCv">
                    <property name="value">
-                    <number>1</number>
+                    <double>10.000000000000000</double>
                    </property>
                   </widget>
                  </item>
-                </layout>
-               </widget>
-              </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QGroupBox" name="breathhold_BrCv">
-                <property name="title">
-                 <string>Breath hold</string>
-                </property>
-                <layout class="QGridLayout" name="gridLayout_BrCv_8" columnstretch="2,1">
-                 <item row="2" column="0">
-                  <widget class="QLineEdit" name="lineEdit_BrCv_30">
+                 <item row="0" column="2">
+                  <widget class="QLineEdit" name="lineEdit_77">
                    <property name="enabled">
                     <bool>false</bool>
                    </property>
                    <property name="text">
-                    <string>Duration (s)</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="1">
-                  <widget class="QSpinBox" name="breathholdStart">
-                   <property name="maximum">
-                    <number>999999</number>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0">
-                  <widget class="QLineEdit" name="lineEdit_BrCv_29">
-                   <property name="enabled">
-                    <bool>false</bool>
-                   </property>
-                   <property name="text">
-                    <string>Start timestamp (s)</string>
+                    <string>ms</string>
                    </property>
                   </widget>
                  </item>
                  <item row="2" column="1">
-                  <widget class="QDoubleSpinBox" name="breathholdDuration"/>
+                  <widget class="QSpinBox" name="smooth_size_BrCv">
+                   <property name="value">
+                    <number>5</number>
+                   </property>
+                  </widget>
                  </item>
-                 <item row="0" column="0">
-                  <widget class="QCheckBox" name="applyBreathhold">
+                 <item row="1" column="2">
+                  <widget class="QLineEdit" name="lineEdit_78">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
                    <property name="text">
-                    <string>Apply breath hold</string>
+                    <string>method</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="2" column="2">
+                  <widget class="QLineEdit" name="lineEdit_79">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="text">
+                    <string>size</string>
                    </property>
                   </widget>
                  </item>
                 </layout>
-               </widget>
-              </item>
-              <item row="3" column="1" colspan="2">
-               <widget class="Line" name="line_BrCv">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
                </widget>
               </item>
              </layout>
@@ -8386,8 +8468,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>261</width>
-             <height>152</height>
+             <width>446</width>
+             <height>412</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8528,8 +8610,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>193</width>
-             <height>119</height>
+             <width>141</width>
+             <height>97</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8595,8 +8677,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>241</width>
-             <height>179</height>
+             <width>174</width>
+             <height>135</height>
             </rect>
            </property>
            <attribute name="label">
